<resources>
    <string name="app_name">CuidadosAdultosMayores</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Strings for personal information -->
    <string name="nombre">NOMBRE DEL PACIENTE</string>
    <string name="name">NOMBRE</string>
    <string name="ocupacion">OCUPACIÓN</string>
    <string name="contraseña">CONTRASEÑA</string>
    <string name="username">NOMBRE DE USUARIO</string>
    <string name="edad">EDAD</string>
    <string name="peso">PESO</string>
    <string name="estatura">ESTATURA</string>
    <string name="padecimientos">PADECIMIENTOS</string>
    <string name="pacientes">LISTADO DE PACIENTES</string>
    <string name="celular">CELULAR</string>
    <string name="usuario">USUARIO</string>
    <string name="cuidados_especiales">CUIDADOS ESPECIALES</string>

    <!-- Strings for buttons -->
    <string name="entrar">ENTRAR</string>
    <string name="regresar">Regresar</string>
    <string name="guardar">GUARDAR</string>
    <string name="Crear_cuenta">CREAR CUENTA</string>
    <string name="forgot">Olvidé mi Contraseña</string>

    <!-- Strings for images descriptions -->
    <string name="logo_Description">Representa el logo principal</string>
    <string name="topimage_Description">Imagen de diseño para la pantalla principal en la parte de arriba</string>
    <string name="bottomimage_Description">Imagen de diseño para la pantalla principal en la parte de abajo</string>


</resources>